:art: add notice related code to MainController
to allow all users(including non-member) to have an access to notice page