@@ -35,9 +35,6 @@ public class PostService {
   @Autowired
   private CommentRepository commentRepository;
 
-  public Optional<Post> retrieve(Long postId) {
-    return postRepository.findById(postId);
-  }
 
   public PostResponseDTO bringPost(Long postId) {
     Optional<Post> postOptional = postRepository.findById(postId);
@@ -117,7 +114,7 @@ public class PostService {
                       .updatedAt(comment.getUpdatedAt())
                       .userId(comment.getUser().getId())
                       .build())
-              .toList();
+              .collect(Collectors.toList());;
     } else {
       commentDTOList = Collections.emptyList();  // 댓글이 없을경우 emptyList 로 성정
     }
@@ -264,5 +261,22 @@ public class PostService {
 
     return postRepository.findByLikesCountGreaterThanEqual(10,pageRequest)
             .map(this::convertToDTO);
+  }
+
+  // 공지사항 게시글 (토큰 필요 X)
+  public  PostResponseDTO retrieve(Long postId, String boardCategory) {
+    Optional<Post> optionalPost = postRepository.findByIdAndBoardCategory(postId, boardCategory);
+    if (optionalPost.isEmpty()) {
+      throw new EntityNotFoundException();
+    }
+
+    return convertToDTO(optionalPost.get());
+  }
+
+  // 공지사항 게시글 리스트 (토큰 필요 X)
+  public Page<PostResponseDTO> retrieveFromNoticeBoard(int page, int pageSize) {
+    PageRequest pageRequest = PageRequest.of(page, pageSize, Sort.by(Sort.Direction.DESC, "createdAt"));
+    Page<Post> postPage = postRepository.findByBoardCategory("notice", pageRequest);
+    return postPage.map(this::convertToDTO);
   }
 }
